--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -6,10 +6,8 @@ ianm-follow-users:
   forum:
     profile_link: => ianm-follow-users.lib.following_link
     user_controls:
-      follow_button: Follow
-      follow_confirmation: Are you sure you want to follow this user?
-      unfollow_button: Unfollow
-      unfollow_confirmation: Are you sure you want to unfollow this user?
+      follow_button: => ianm-follow-users.lib.follow
+      unfollow_button: => ianm-follow-users.lib.change_follow_type
 
     settings:
       notify_new_follower_label: Someone follows me
@@ -19,8 +17,8 @@ ianm-follow-users:
       block_follow: Prevent users from following me
 
     index:
-      follow_tag_button: Follow
-      unfollow_tag_button: Update Follow Levels
+      follow_tag_button: => ianm-follow-users.lib.follow
+      unfollow_tag_button: => ianm-follow-users.lib.change_follow_type
 
     notifications:
       new_discussion_text: "{username} started"
@@ -93,6 +91,9 @@ ianm-follow-users:
 
   lib:
     following_link: Followed Users
+
+    follow: Follow
+    change_follow_type: Change follow type
 
     follow_levels:
       unfollow:
