--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -1,5 +1,4 @@
 ianm-follow-users:
-
   admin:
     permissions:
       be_followed_label: Allow users to follow
@@ -21,7 +20,7 @@ ianm-follow-users:
 
     index:
       follow_tag_button: Follow
-      unfollow_tag_button: Stop Following
+      unfollow_tag_button: Update Follow Levels
 
     notifications:
       new_discussion_text: "{username} started"
@@ -34,6 +33,20 @@ ianm-follow-users:
 
     filter:
       following: Followed users
+
+    modals:
+      select_follow_level:
+        title: "Select follow level for {username}"
+        description: "Choose how you'd like to follow <em>{username}</em>."
+
+        follow_levels_heading: "Follow levels"
+        follow_select_label: "Follow type"
+
+        no_user_attr_provided_err: "Uh oh, something went wrong while opening this modal."
+        no_user_attr_provided_err_debug: "No `user` attribute was passed to the SelectFollowUserLevel modal when created. Modal cannot be rendered."
+
+        save_btn: "Save"
+        cancel_btn: "Cancel"
 
   email:
     new_discussion_by_user_subject: "[Follow User] {title}"
@@ -80,3 +93,22 @@ ianm-follow-users:
 
   lib:
     following_link: Followed Users
+
+    follow_levels:
+      unfollow:
+        name: Don't follow
+
+        description: |
+          Don't receive any notifications for <em>{username}</em>'s activity.
+
+      follow:
+        name: Follow discussions
+
+        description: |
+          Receive notifications when <em>{username}</em> starts new a new discussion.
+
+      lurk:
+        name: Follow all
+
+        description: |
+          Receive notifications when <em>{username}</em> starts a new discussion or posts within any discussion.
