--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -5,6 +5,10 @@ ianm-follow-users:
 
   forum:
     profile_link: => ianm-follow-users.lib.following_link
+
+    profile_page:
+      no_following: It looks like you're not following anyone.
+
     user_controls:
       follow_button: => ianm-follow-users.lib.follow
       unfollow_button: => ianm-follow-users.lib.change_follow_type
