Optional follow control button on UserCard

--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -2,6 +2,8 @@ ianm-follow-users:
   admin:
     permissions:
       be_followed_label: Allow users to follow
+    settings:
+      button-on-profile-label: Show the Follow button directly on the user profile header
 
   forum:
     profile_link: => ianm-follow-users.lib.following_link
