--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -4,6 +4,7 @@ ianm-follow-users:
       be_followed_label: Allow users to follow
     settings:
       button-on-profile-label: Show the Follow button directly on the user profile header
+      stats-on-profile-label: Show follower and following counts on user profiles
 
   forum:
     followed: Followed
