--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -8,7 +8,7 @@ ianm-follow-users:
 
   forum:
     followed: Followed
-    followers: Followers
+    followers: "{count, plural, one {Follower} other {Followers}}"
     profile_link: => ianm-follow-users.lib.following_link
 
     profile_page:
