--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -1,3 +1,11 @@
+blomstra-gdpr:
+  lib:
+    data:
+      followuser:
+        export_description: Exports details of users followed and users following.
+        anonymize_description: "=> blomstra-gdpr.lib.data.followuser.delete_description"
+        delete_description: Deletes all data related to following users.
+
 ianm-follow-users:
   admin:
     permissions:
