fix: cannot unfollow user who blocks following

--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -24,7 +24,8 @@ ianm-follow-users:
 
     user_controls:
       follow_button: => ianm-follow-users.lib.follow
-      unfollow_button: => ianm-follow-users.lib.change_follow_type
+      unfollow_button: => ianm-follow-users.lib.unfollow
+      change_button: => ianm-follow-users.lib.change_follow_type
 
     settings:
       notify_new_follower_label: Someone follows me
@@ -113,6 +114,7 @@ ianm-follow-users:
 
     follow: Follow
     change_follow_type: Change follow type
+    unfollow: Unfollow
 
     follow_levels:
       unfollow:
