--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -3,7 +3,7 @@ flarum-gdpr:
     data:
       followuser:
         export_description: Exports details of users followed and users following.
-        anonymize_description: "=> blomstra-gdpr.lib.data.followuser.delete_description"
+        anonymize_description: "=> flarum-gdpr.lib.data.followuser.delete_description"
         delete_description: Deletes all data related to following users.
 
 ianm-follow-users:
